# KaoyanCrawler

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  extract_json.py  ocr_result.txt  pyproject.toml  requirements.txt  scut_admission_data.json
configs/: bit.yaml  bnu.yaml  buaa.yaml  cau.yaml  cqu.yaml  csu.yaml  dlut.yaml  ecnu.yaml  fudan.yaml  hit.yaml  hnu.yaml  hust.yaml  jlu.yaml  lzu.yaml  muc.yaml  nankai.yaml  neu.yaml  nju.yaml  nudt.yaml  nwafu.yaml  nwpu.yaml  ouc.yaml  pku.yaml  ruc.yaml  scu.yaml  scut.yaml  sdu.yaml  seu.yaml  sjtu.yaml  sysu.yaml  template.yaml  tju.yaml  tongji.yaml  tsinghua.yaml  uestc.yaml  ustc.yaml  whu.yaml  xjtu.yaml  xmu.yaml  zju.yaml
scripts/: generate_configs.py  test_chsi.py  test_chsi10.py  test_chsi11.py  test_chsi12.py  test_chsi13.py  test_chsi14.py  test_chsi2.py  test_chsi3.py  test_chsi4.py  test_chsi5.py  test_chsi6.py  test_chsi7.py  test_chsi8.py  test_chsi9.py  universities_985.py
src/: main.py
src/api/: app.py
src/config/: settings.py
src/crawler/: ai_extractor.py  auto_crawler.py  config_loader.py  discovery.py  engine.py  image_extractor.py
src/db/: database.py
src/models/: schemas.py
src/parsers/: html_parser.py  pdf_parser.py
web/frontend/: index.html  package-lock.json  package.json  vite.config.js
web/frontend/src/: App.vue  main.js
web/frontend/src/components/: AIExtractor.vue  AdmissionTable.vue  ConfettiEffect.vue  ConfigWizard.vue  EmptyState.vue  ImageExtractor.vue  RetestRulesTable.vue  SchoolDetail.vue  SchoolList.vue  ScoreLinesTable.vue  SearchPanel.vue  (+5 more)
(+6 files in other folders)
