[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kaoyan-crawler"
version = "0.1.0"
description = "中国985/211院校研究生复试名单与录取名单数据采集系统"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "selectolax>=0.3.21",
    "beautifulsoup4>=4.12.0",
    "pdfplumber>=0.11.0",
    "pyyaml>=6.0",
    "aiosqlite>=0.20.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "fake-useragent>=1.5.0",
    "tenacity>=8.0.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.5.0",
]

[project.scripts]
kaoyan = "src.main:cli"

[tool.ruff]
line-length = 100
target-version = "py310"
